# vscode-to-notepadpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.MD
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI_build.yml
data/: keybinding-mappings.json  vscode-default-keybindings.windows.json
docs/: VSCodeKeybindingCoverage.MD
scripts/: package-release.ps1  sync-vscode-keybindings.ps1
src/: GeneratedBindings.inc  VSCodeKeymapNpp.rc.in  VSCodeKeymapPlugin.cpp
src/handlers/: ActionHandlers.cpp  ActionHandlers.h  CommentHandlers.cpp  CursorHandlers.cpp  CustomHandlers.h  FoldHandlers.cpp  LineHandlers.cpp  ScrollHandlers.cpp
